# ML_LIB

./: CMakeLists.txt  Matrix.cpp  Matrix.h  README.md  main.cpp  mathFunctions.cpp  mathFunctions.h
src/: Data.cpp  Data.h  LinearRegression.cpp  LinearRegression.h  LogisticRegression.cpp  LogisticRegression.h  Matrix.cpp  Matrix.h  Model.h  PolynomialRegression.cpp  PolynomialRegression.h  Regression.cpp  Regression.h  SupervisedModel.cpp  SupervisedModel.h  mathFunctions.cpp  mathFunctions.h
